[tool.poetry]
name = "cessoc"
version = "1.0.1"
description = "Master CES SOC python library"
authors = ["Brian Byrd <bjb298@byu.edu>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pika = "^1.3.1"
requests = "^2.28.1"
boto3 = "^1.26.14"
python-json-logger = "^2.0.4"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"